--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
     "jest": "^25.4.0",
+    "less": "^3.11.3",
+    "less-loader": "^6.1.0",
     "mini-types": "*",
     "miniprogram-api-typings": "*",
     "postcss-comment": "^2.0.0",
